--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorYellow">#89FA36</color>
+
+    <color name="bgSearchRadio_selected">#ffffff</color>
+    <color name="bgSearchRadio_normal">#999999</color>
 </resources>
