我修改了搜索界面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="colorYellow">#89FA36</color>
 
     <color name="bgSearchRadio_selected">#ffffff</color>
-    <color name="bgSearchRadio_normal">#999999</color>
+    <color name="bgSearchRadio_normal">#bfbfbf</color>
 </resources>
