--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     android:orientation="vertical"
     tools:context="com.yikouguaishou.peanutfm.SearchActivity">
 
@@ -14,49 +15,54 @@
     </com.yikouguaishou.peanutfm.view.SearchView>
 
     <RelativeLayout
-        android:visibility="visible"
+        android:id="@+id/rl_search_result"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
         <RadioGroup
             android:id="@+id/mRadioGroup_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:padding="1dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/bgSearchRadio_normal"
             android:orientation="horizontal"
-            android:background="#999999">
+            android:padding="1dp">
+
             <RadioButton
                 android:id="@+id/mRadioButton_album"
-                android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/search_rb_background_color"
                 android:button="@null"
                 android:checked="true"
                 android:gravity="center_horizontal"
+                android:padding="8dp"
                 android:text="专辑"
-                android:textSize="20sp"
                 android:textColor="@drawable/search_rb_text_color"
-                android:background="@drawable/search_rb_background_color"
-                />
+                android:textSize="16sp" />
+
             <RadioButton
                 android:id="@+id/mRadioButton_single"
-                android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/search_rb_background_color"
+
                 android:button="@null"
                 android:gravity="center_horizontal"
+                android:padding="8dp"
                 android:text="单曲"
-                android:textSize="20sp"
                 android:textColor="@drawable/search_rb_text_color"
-                android:background="@drawable/search_rb_background_color"
-                />
+                android:textSize="16sp" />
         </RadioGroup>
+
         <ListView
             android:id="@+id/mListView_search"
-            android:layout_below="@id/mRadioGroup_search"
-            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            android:layout_below="@id/mRadioGroup_search" />
     </RelativeLayout>
 </LinearLayout>
