--- a/app/src/main/res/layout/typetwo_layout.xml
+++ b/app/src/main/res/layout/typetwo_layout.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="12dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:orientation="vertical">
 
     <ImageView
         android:layout_margin="10dp"
         android:id="@+id/iv_typetwo"
+        android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:background="@mipmap/ic_launcher"
-        android:layout_height="120dp" />
+        android:layout_height="150dp" />
 
     <TextView
         android:id="@+id/tv_typetwo"
