--- a/app/src/main/res/layout/type_threeandzero_item.xml
+++ b/app/src/main/res/layout/type_threeandzero_item.xml
@@ -18,14 +18,15 @@
                 android:id="@+id/iv_picture1"
                 android:layout_width="200dp"
                 android:layout_height="100dp"
-                android:scaleType="centerCrop"
+                android:layout_margin="4dp"
+                android:scaleType="fitXY"
                 android:background="@mipmap/ic_launcher" />
 
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="4dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="4dp"
                 android:background="@mipmap/ic_launcher"
                 android:scaleType="fitXY"
