--- a/app/src/main/res/layout/fragment_radio_station.xml
+++ b/app/src/main/res/layout/fragment_radio_station.xml
@@ -1,13 +1,21 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.yikouguaishou.peanutfm.fragment.RadioStationFragment">
 
-
     <TextView
+        android:id="@+id/tv_radio_station"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:gravity="center_horizontal"
+        android:text="请选择电台" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_radio_station"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+        />
+</LinearLayout>
