写了MineFragment（我的）界面

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -2,12 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.yikouguaishou.peanutfm.fragment.MineFragment">
+    tools:context="com.yikouguaishou.peanutfm.fragment.MineFragment"
+    android:background="#FFFCF5"
+    >
 
 
-    <TextView
+    <ListView
+        android:id="@+id/mListView_mf"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        >
+
+    </ListView>
 
 </FrameLayout>
