加载Banner 和 一些图片

--- a/app/src/main/res/layout/type_threeandzero_item.xml
+++ b/app/src/main/res/layout/type_threeandzero_item.xml
@@ -19,18 +19,17 @@
                 android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:layout_margin="4dp"
-                android:scaleType="fitXY"
-                android:background="@mipmap/ic_launcher" />
+                android:scaleType="fitXY" />
 
             <ImageView
+                android:id="@+id/iv_start"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="4dp"
-                android:background="@mipmap/ic_launcher"
-                android:scaleType="fitXY"
-                android:id="@+id/iv_start" />
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="8dp"
+                android:background="@mipmap/play_start"
+                android:scaleType="fitXY" />
         </RelativeLayout>
 
 
@@ -38,9 +37,9 @@
             android:id="@+id/tv_descriptions1"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:text="帝国崛起第三十集"
