--- a/app/src/main/res/layout/typezero_item.xml
+++ b/app/src/main/res/layout/typezero_item.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:id="@+id/con_layout1"
-        android:layout_width="160dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -18,16 +18,16 @@
                 android:id="@+id/iv_picture1"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:scaleType="centerCrop"
-                android:layout_margin="2dp"
+                android:scaleType="fitXY"
+                android:layout_margin="4dp"
                 android:background="@mipmap/ic_launcher" />
 
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="4dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginLeft="6dp"
                 android:background="@mipmap/ic_launcher"
                 android:scaleType="fitXY"
                 android:id="@+id/iv_start" />
@@ -41,10 +41,10 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:ellipsize="end"
+            android:ellipsize="middle"
             android:maxLines="2"
             android:text="帝国崛起第三十集"
-            android:textSize="12sp" />
+            android:textSize="11sp" />
 
         <TextView
             android:id="@+id/tv_name1"
@@ -52,10 +52,10 @@
             android:layout_height="30dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:ellipsize="end"
+            android:ellipsize="middle"
             android:maxLines="2"
             android:text="帝国崛起"
-            android:textSize="10sp" />
+            android:textSize="9sp" />
     </LinearLayout>
 
 </LinearLayout>
