--- a/app/src/main/res/layout/activity_column_list.xml
+++ b/app/src/main/res/layout/activity_column_list.xml
@@ -1,12 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.yikouguaishou.peanutfm.ColumnListActivity">
+
+    <FrameLayout
+        android:id="@+id/mFrameLayout_columnList"
+        android:layout_width="match_parent"
+        android:layout_height="32dp">
+
+        <RelativeLayout
+            android:id="@+id/mLinearLayout_columnList"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:layout_margin="5dp"
+            android:background="@android:color/transparent"
+            android:padding="5dp">
+
+            <ImageView
+                android:id="@+id/mButton_columnList_back"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="15dp"
+                android:src="@mipmap/column_back" />
+
+            <TextView
+                android:id="@+id/mTextView_columnList_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="mTextView_column_title"
+                android:textColor="#ffffff"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/mButton_columnList_share"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/column_share" />
+        </RelativeLayout>
+    </FrameLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mRecyclerView_columnList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
