--- a/app/src/main/res/layout/sort_details_item.xml
+++ b/app/src/main/res/layout/sort_details_item.xml
@@ -8,27 +8,21 @@
     <RelativeLayout
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_gravity="center_horizontal"
-        >
+        android:layout_gravity="center_horizontal">
 
 
-        <RoundedImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_sortDetails_logo"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:riv_corner_radius_bottom_left="5dp"
-            android:riv_corner_radius_bottom_right="5dp"
-            android:riv_corner_radius_bottom_top="5dp"
-            android:riv_corner_radius_bottom_bottom="5dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            app:riv_corner_radius="14dp" />
 
         <ImageView
             android:id="@+id/iv_start"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="6dp"
-            android:layout_marginLeft="6dp"
             android:background="@mipmap/play_start"
             android:scaleType="fitXY" />
     </RelativeLayout>
