类型零（大玩家）的点击事件，活动的点击事件。

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
 
     <color name="bgSearchRadio_selected">#ffffff</color>
     <color name="bgSearchRadio_normal">#bfbfbf</color>
+    <color name="colorRed">#ff00</color>
 </resources>
