--- a/app/src/main/res/layout/fragment_mine_header.xml
+++ b/app/src/main/res/layout/fragment_mine_header.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:padding="30dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#e3e6ac"
+    android:background="#e4eaae"
     android:gravity="center">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -12,7 +12,7 @@
         android:layout_height="100dp"
         app:civ_border_width="2dp"
         app:civ_border_color="#171616"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/touxiang"
         />
 
 
