--- a/app/src/main/res/layout/fragment_minlistview_item.xml
+++ b/app/src/main/res/layout/fragment_minlistview_item.xml
@@ -8,10 +8,13 @@
     >
     <ImageView
         android:id="@+id/itemlog"
-        android:layout_width="60dp"
-        android:layout_height="match_parent"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:padding="9dp"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="fitXY"
+
+        />
     <TextView
         android:id="@+id/itemname"
         android:layout_width="0dp"
@@ -22,7 +25,7 @@
         android:id="@+id/itemlogo2"
         android:layout_width="60dp"
         android:layout_height="match_parent"
-        android:padding="11dp"
+        android:padding="15dp"
         android:src="@drawable/rightjian"/>
 
 
