增加了专题列表界面的排序，下载功能 优化了专题列表界面

--- a/app/src/main/res/layout/activity_sort_details.xml
+++ b/app/src/main/res/layout/activity_sort_details.xml
@@ -9,7 +9,7 @@
     tools:context="com.yikouguaishou.peanutfm.SortDetailsActivity">
 
     <RelativeLayout
-        android:id="@+id/mLinearLayout_sortDetails"
+        android:id="@+id/mRelativeLayout_sortDetails"
         android:layout_width="match_parent"
         android:layout_height="32dp">
 
@@ -31,41 +31,18 @@
             android:textSize="16sp" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/mRelativeLayout_sortDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/mLinearLayout_sortDetails"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:id="@+id/mTextView_sortDetails_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="sortDetails_name"
-            android:textColor="#ffcc00"
-            android:textSize="14sp" />
-
-        <Button
-            android:id="@+id/mButton_sortDetails_more"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@null"
-            android:drawableRight="@mipmap/more"
-            android:text="更多"
-            android:textColor="#bfbfbf"
-            android:textSize="12sp" />
-    </RelativeLayout>
-
-    <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
-        android:id="@+id/mUltimateRecyclerView_sortDetails"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/mSwipeRefreshLayout_sortDetails"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_below="@id/mRelativeLayout_sortDetails">
 
-    </com.marshalchen.ultimaterecyclerview.UltimateRecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/mRecyclerView_sortDetails"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
