--- a/app/src/main/res/layout/columnlist_recycleview_header.xml
+++ b/app/src/main/res/layout/columnlist_recycleview_header.xml
@@ -6,7 +6,7 @@
     android:layout_marginBottom="10dp"
     android:layout_marginLeft="12dp"
     android:layout_marginRight="12dp"
-    android:layout_marginTop="2dp">
+    android:layout_marginTop="8dp">
 
     <TextView
         android:id="@+id/mTextView_columnList_count"
@@ -27,10 +27,18 @@
         android:textColor="#515151"
         android:textSize="16sp" />
     <ImageView
-        android:id="@+id/mImageView_columnList_sort"
+        android:id="@+id/mImageView_columnList_asc"
         android:layout_toLeftOf="@id/mTextView_columnList_sort"
         android:layout_centerVertical="true"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:src="@mipmap/sort_icon"/>
+        android:visibility="gone"
+        android:src="@mipmap/asc_sort"/>
+    <ImageView
+        android:id="@+id/mImageView_columnList_desc"
+        android:layout_toLeftOf="@id/mTextView_columnList_sort"
+        android:layout_centerVertical="true"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:src="@mipmap/desc_sort"/>
 </RelativeLayout>
