--- a/app/src/main/res/layout/rv_item_radio_station_list_child.xml
+++ b/app/src/main/res/layout/rv_item_radio_station_list_child.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="75dp"
-    android:layout_marginLeft="10dp"
-    >
+    android:layout_marginLeft="10dp">
 
     <TextView
         android:id="@+id/rv_item_tv_channel"
@@ -15,25 +14,42 @@
         android:id="@+id/rv_item_tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="正在直播:" />
+        android:layout_marginTop="25dp"
+        android:text="正在直播:"
+        android:textColor="#8C8C8C"
+        android:textSize="12sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/rv_item_tv_anchor"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="主播:" />
+            android:text="主播:"
+            android:textColor="#8C8C8C"
+            android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/rv_item_tv_number"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="正在直播:" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:src="@mipmap/listen_icon" />
+
+            <TextView
+                android:id="@+id/rv_item_tv_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:textColor="#8C8C8C"
+                android:textSize="12sp" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
